--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="google-site-verification" content="7CMlAm3QI588Ptkh9qMEX0iD0lQMWWme4R-8Hhb9sgE" />
+    <meta name="msvalidate.01" content="7D6BEC6384053B54800E984C928ED982" />
     <link rel="icon" href="<%= BASE_URL %>logo.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6V2V4T2DVQ"></script>
+    
   </head>
   <body>
     <noscript>
@@ -14,5 +17,12 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-6V2V4T2DVQ');
+    </script>
   </body>
 </html>
