--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="msvalidate.01" content="7D6BEC6384053B54800E984C928ED982" />
     <link rel="icon" href="<%= BASE_URL %>logo.ico">
     <link rel="apple-touch-icon" href="<%= BASE_URL %>logo.ico">
+    <link rel = "manifest "href ="<%= BASE_URL %>manifest.json"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6V2V4T2DVQ"></script>
     
