--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="<%= BASE_URL %>logo.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6V2V4T2DVQ"></script>
+    <link rel="stylesheet" rel="preconnect" href="https://use.typekit.net/obe2jlt.css" >
 
 
     <!-- Manfifest PWA -->
