--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <meta name = "apple-mobile-web-app-capable" content = "yes">
     <meta name = "apple-mobile-web-app-status-bar-style" content = "default">
     <meta name = "apple-mobile-web-app-title" content = "AB Portfolio">
-    <link rel="apple-touch-icon" href="<%= BASE_URL %>logo.ico">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>img/logo/apple-touch-icon.webp">
     <meta name = "msapplication-TileImage" content = "<%= BASE_URL %>img/msapplication-icon-144x144.webp">
     <meta name = "msapplication-TileColor" content = "#000">
 
